add basic beatmap parsing and drawing

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "aws/aws-sdk-php": "^3.147",
         "tuupola/base62": "^2.0",
         "robmorgan/phinx": "^0.12.3",
-        "aura/sql": "^3.0"
+        "aura/sql": "^3.0",
+        "imagine/imagine": "^1.2"
     }
 }
